# wasserstein_mcf

./: CMakeLists.txt  pyproject.toml  reinstall.sh
src/cpp/wasserstein_mcf/: distribution.hpp  main.cpp
src/python/wasserstein_mcf/: __init__.py
